# space-invaders-server

./: .gitmodules  Cargo.toml  update_client.sh
client/: index.html  space-invaders.html
client/compiled/: space-invaders.html  space-invaders.js
src/: main.rs
